--- a/phishing_page/index.html
+++ b/phishing_page/index.html
@@ -183,9 +183,27 @@
     .footer-links a:hover {
       text-decoration: underline;
     }
+
+    .warning-banner {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: #ffebee;
+      color: #b71c1c;
+      font-weight: bold;
+      text-align: center;
+      padding: 10px;
+      z-index: 9999;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
+
+  <div class="warning-banner">
+    ⚠ 이 페이지는 교육용 모의 피싱 실험입니다. 실제 개인정보를 입력하지 마세요.
+  </div>
 
   <div class="container">
     <div class="card">
